Dracula (One Ball MOD)
Earth, Wind & Fire (Free Play), (alternate sound)
Elvira and the Party Monsters LG-3 (German) (incomplete dump)
Elvis 1.00
Farfalla (French Speech), (alternate, incl. Italian/French/German Speech versions)
Fire Mountain (Free Play)
Flipper Football 1.03
Frankenstein 1.03 (Italian)
Future World (Free Play)
Galaxy (7-Digit conversion, Fixes & modified rules)
Hook 4.01 (French), 4.00 (incomplete dumps)
Hot Wheels (Free Play)
House of Diamonds (Free Play)
Jungle Lord (new tricks) L-2beta, L-2 & L-3beta (MOD)
Last Action Hero 1.08 Spanish with Display 1.05 (not working correctly :/)
Lightning (Free Play & MOD rev. 25)
Locomotion (Free Play)
Metallica 0.52
Mexico 86 (Italian Speech)
Middle Earth (Free Play)
Mr. & Mrs. Pac-Man Pinball (alternate version)
Odin (Prototype)
Pinball Champ (French Speech)
Pin-Bot J-2, J-3 (PEMBOT (no relation)) (MOD)
Pool Champion (Italian Speech, Free Play) (incomplete dump)
Rollergames LA-1
Royal Flush Deluxe rev. 1
Scared Stiff 1.1, 1.1 with Sound 1.0
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Shadow, The LF-4 (French)
Shooting the Rapids (Free Play)
Space Riders (Free Play)
Space Shuttle (Zaccaria) (Free Play)
Spirit (initial release) & rev. 3 (MOD)
Star God (Free Play), (alternate sound, Free Play)
Striker (German Speech), (French Speech)
STTNG LX-8 (MOD) (using the special L-1 sound roms, note that the special callouts can be turned off completely within the game menu)
Swords of Fury LG-2 (German)
Teenage Mutant Ninja Turtles A 0.7 VUK (Prototype)
Terminator 2 L-8.4 (MOD)
Time 2000 (Free Play)
Time Machine (Zaccaria, Italian Speech), (Zaccaria, alternate)
Tommy 1.02 (Belgian), 2.01 (Dutch), 3.01 (German)
Transporter the Rescue LA-1, LU-3
Whirlwind LG-1 (German), LG-2 (German) (no U26 dumps available, seem to work with known one)
White Water P-6 (Prototype)
Wildfyre (One Ball MOD)
Winter Sports (Free Play)