@@ -2605,7 +2605,8 @@ DRIVER(alcat,l7)        //S11-918:  ??/85 W Alley Cats (Shuffle)
 DRIVER(hs,l3)           //S11-541:  01/86 W High Speed (L-3)
 DRIVER(hs,l4)           //          01/86 W High Speed (L-4)
 DRIVER(hs,l4c)          //          05/18 W High Speed (L-4C Competition MOD (f43c))
-DRIVER(grand,l3)        //S11-523:  04/86 W Grand Lizard (L-3)
+DRIVER(grand,l1)        //S11-523:  04/86 W Grand Lizard (L-1)
+DRIVER(grand,l3)        //          04/86 W Grand Lizard (L-3)
 DRIVER(grand,l4)        //          04/86 W Grand Lizard (L-4)
 DRIVER(rdkng,l1)        //S11-542:  07/86 W Road Kings (L-1)
 DRIVER(rdkng,l2)        //          07/86 W Road Kings (L-2)
