@@ -160,6 +160,7 @@ Flipper Football 1.03
 Frankenstein 1.03 (Italian)
 Future World (Free Play)
 Galaxy (7-Digit conversion, Fixes & modified rules)
+Grand Lizard L-1
 Hook 4.01 (French), 4.00 (incomplete dumps)
 Hot Wheels (Free Play)
 House of Diamonds (Free Play)
